name         : hleap
version      : 0.2.0.0
synopsis     : Web Socket interface to Leap Motion controller
description  : This Haskell package contains functions for interfacing with Leap Motion controllers, \<<https://www.leapmotion.com/product/desktop>\>.  It is based on the WebSocket API \<<https://developer.leapmotion.com/documentation/javascript/supplements/Leap_JSON.html>\> and inspired by \<<https://bitbucket.org/turion/jedinight/>\>.
license      : MIT
license-file : LICENSE
author       : Brian W Bush <code@functionally.io>
maintainer   : Brian W Bush <code@functionally.io>
copyright    : (c) 2016-19 Brian W Bush
category     : Hardware
build-type   : Simple
cabal-version: >= 1.10
stability    : Stable
homepage     : https://bitbucket.org/functionally/hleap
bug-reports  : https://bwbush.atlassian.net/projects/HLEAP/issues/
package-url  : https://bitbucket.org/functionally/hleap/downloads/hleap-$version.tar.gz

extra-source-files: ReadMe.md
                    default.nix

source-repository head
  type    : git
  location: https://bitbucket.org/functionally/hleap.git
 
library
  exposed-modules : System.Hardware.Leap
                    System.Hardware.Leap.Event
                    System.Hardware.Leap.Event.Gesture
                    System.Hardware.Leap.Event.Hand
                    System.Hardware.Leap.Event.Pointable
                    System.Hardware.Leap.Types
  build-depends   : base >= 4.8 && < 5
                  , aeson
                  , containers
                  , data-default
                  , mtl
                  , text
                  , unordered-containers
                  , websockets
  hs-source-dirs  : src
  exposed         : True
  buildable       : True
  ghc-options     : -Wall
  default-language: Haskell2010

executable leap-tracker
  main-is         : Main.hs
  other-modules   : System.Hardware.Leap
                    System.Hardware.Leap.Event
                    System.Hardware.Leap.Event.Gesture
                    System.Hardware.Leap.Event.Hand
                    System.Hardware.Leap.Event.Pointable
                    System.Hardware.Leap.Types
  build-depends   : base
                  , aeson
                  , containers
                  , data-default
                  , mtl
                  , text
                  , unordered-containers
                  , websockets
  hs-source-dirs  : src
  ghc-options     : -Wall
  default-language: Haskell2010
